--- a/_config.yml
+++ b/_config.yml
@@ -7,8 +7,8 @@ email: yan.zhang@inf.ethz.ch
 # Search Engine Optimization (SEO)
 # The following information is used to improve the website traffic from search engines, e.g., Google.
 keywords: yanzhang
-description: The Minimal Light is a simple and elegant jekyll theme for academic personal homepage.
-canonical: https://minimal-light-theme.yliu.me/
+description: digital human technologies
+canonical: https://yz-cnsdqz.github.io
 
 # Links 
 # If you don't need one of them, you may delete the corresponding line.
