--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@ canonical: https://yz-cnsdqz.github.io
 # Links 
 # If you don't need one of them, you may delete the corresponding line.
 google_scholar: https://scholar.google.com/citations?user=5VpkLO8AAAAJ&hl=en
-cv_link: 
+cv_link: assets/files/yanzhang_CV.pdf
 github_link: https://github.com/yz-cnsdqz
 linkedin: https://www.linkedin.com/in/yan-zhang-3119b11a/
 twitter: https://twitter.com/cnsdqzyz
