--- a/_config.yml
+++ b/_config.yml
@@ -1,13 +1,13 @@
 # Basic Information 
 title: Yan Zhang
-position: Postdoc Researcher
-affiliation: ETH Zurich
-email: yan.zhang@inf.ethz.ch
+position: Research Scientist
+affiliation: Meshcapade
+email: yan@meshcapade.com
 
 # Search Engine Optimization (SEO)
 # The following information is used to improve the website traffic from search engines, e.g., Google.
 keywords: yanzhang
-description: digital human technologies
+description: human-centric AI
 canonical: https://yz-cnsdqz.github.io
 
 # Links 
